// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the description and category 1`] = `
<td
  className="text-top width-25 big-spacer-right"
>
  <div>
    <strong
      className="js-plugin-name"
    >
      Foo
    </strong>
    <a
      className="js-plugin-category badge spacer-left"
      href="#"
      onClick={[Function]}
    >
      foocategory
    </a>
  </div>
  <div
    className="js-plugin-description little-spacer-top"
  >
    foo description
  </div>
</td>
`;

exports[`should not display any category 1`] = `
<td
  className="text-top width-25 big-spacer-right"
>
  <div>
    <strong
      className="js-plugin-name"
    >
      Foo
    </strong>
  </div>
  <div
    className="js-plugin-description little-spacer-top"
  >
    foo description
  </div>
</td>
`;
